--- a/XmlParseLib/XmlParseLib.vcxproj.filters
+++ b/XmlParseLib/XmlParseLib.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="XmlParser.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="NS.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="XmlParser.cpp">
